[metadata]
name = laszlo
author = David Husz
author_email = contact@davidhusz.com
description =  A package for creating flexible audio loopers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davidhusz/laszlo

[options]
packages = laszlo
package_dir =
	= src
install_requires =
	pyo >= 1.0.4
	pywebview >= 3.4; platform_system!="Linux"
	pywebview[qt] >= 3.4; platform_system=="Linux"
	strictyaml >= 1.4.4
include_package_data = True
python_requires = >= 3.6
